--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,8 @@
+.app {
+  background-color: #111110;
+  height: 100vh;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -227,3 +232,4 @@
     transform: rotate(0deg);
   }
 }
+
