--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,33 @@
     @apply px-4;
   }
 }
+
+@keyframes shake-once {
+  0% {
+    transform: translateY(0);
+  }
+  12.5% {
+    transform: translateY(-5px);
+  }
+  25% {
+    transform: translateY(0);
+  }
+  37.5% {
+    transform: translateY(5px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  62.5% {
+    transform: translateY(-5px);
+  }
+  75% {
+    transform: translateY(0);
+  }
+  87.5% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
