--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -112,3 +112,31 @@
     transform: translateY(0);
   }
 }
+
+.blur {
+  filter: blur(8px);
+  transition: filter 0.3s;
+}
+
+.description-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.7); /* semi-transparent white */
+  padding: 20px;
+  border-radius: 10px;
+  width: 80%; 
+  height: auto;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.description-text {
+  color: #000;
+  font-size: 16px;
+  text-align: center;
+}
+
